# vista

./: .gitignore  Cargo.toml  LICENSE  deny.toml  flake.nix
entity/src/: cv_detect.rs  mod.rs  prelude.rs  rfid_detect.rs  rfid_spool.rs
log/: Cargo.toml
log/src/: lib.rs  logger.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: cli.rs  conf.rs  cv.rs  db.rs  direction.rs  main.rs  proc.rs  recorder.rs  rfid.rs
src/api/: mod.rs
src/auth/: auth.rs
src/cv/: frame_metrics.rs  mat_view.rs  mod.rs  net.rs
src/cv/centroid/: mod.rs
