[package]
name = "vista"
version = "0.1.0"
edition = "2024"

[features]
default = []

[profile.dev]
debug = 2

# [rust]
# debuginfo-level = 1

# [build]
# rustflags = ["-C", "force-frame-pointers=yes", "-C", "symbol-mangling-version=v0"]


[workspace]
members = [".", "log"]

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
clog = "0.11.0"
confy = { version = "0.6.1", features = [
    "yaml_conf",
], default-features = false }
log = { path = "log" }
opencv = "0.94.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0.68"
regex = "1.11.1"
pathfinding = "4.14.0"
csv = "1.2"