[package]
name = "vista"
version = "0.1.0"
edition = "2024"

[features]
default = []

[profile.dev]
debug = 2

# [rust]
# debuginfo-level = 1

# [build]
# rustflags = ["-C", "force-frame-pointers=yes", "-C", "symbol-mangling-version=v0"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[workspace]
members = [".", "log"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
confy = { version = "1.0.0", features = [
  "yaml_conf",
], default-features = false }
csv = "1.3.1"
log = { path = "log" }
opencv = "0.94.4"
pathfinding = "4.14.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
smallvec = "1.15.0"
tokio = { version = "1.45.1", features = ["full"] }
hex = "0.4.3"
hmac = "0.12.1"
once_cell = "1.21.3"
sha2 = "0.10.9"
reqwest = { version = "0.12", features = ["json"] }